@@ -40,6 +40,11 @@ IN DEVELOPMENT
     * When logging the changes to a particular file, there was a bug if there
       were ghosts in the revision ancestry. (John Arbash Meinel, #209948)
 
+    * xs4all's ftp server returns a temporary error when trying to list an
+      empty directory, rather than returning an empty list. Adding a
+      workaround so that we don't get spurious failures.
+      (John Arbash Meinel, #215522)
+
   DOCUMENTATION:
 
     * Document outlining strategies for TortoiseBzr. (Mark Hammond)
